Add DMOJ problem "S3 - Chances of Winning" and update VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "generator": "cpp",
     "text_encoding": "cpp",
     "compare": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "*.tcc": "cpp"
   }
 }
